# backend/docs/swagger.json
@@ -46,7 +46,7 @@
         "tags": [
           "Auth"
         ],
-        "summary": "Register new user 1",
+        "summary": "Register new user",
         "operationId": "authRegister",
         "security": [],
         "description": "Register new user",
@@ -612,7 +612,7 @@
         }
       }
     },
-    "/recipes/search": {
+    "/recipes": {
       "get": {
         "tags": [
           "Recipes"
@@ -638,7 +638,7 @@
         }
       }
     },
-    "/recipes": {
+    "/recipes/my": {
       "get": {
         "tags": [
           "Recipes"
@@ -651,13 +651,63 @@
             "bearerAuth": []
           }
         ],
+        "parameters": [
+          {
+            "in": "query",
+            "name": "page",
+            "schema": {
+              "default": 1
+            },
+            "description": "Page number to retrieve"
+          },
+          {
+            "in": "query",
+            "name": "limit",
+            "schema": {
+              "default": 10
+            },
+            "description": "Number of items per page"
+          }
+        ],
         "responses": {
           "200": {
             "description": "Successfully add",
             "content": {
               "application/json": {
                 "schema": {
-                  "type": "object"
+                  "type": "object",
+                  "properties": {
+                    "page": {
+                      "type": "integer"
+                    },
+                    "limit": {
+                      "type": "integer"
+                    },
+                    "total": {
+                      "type": "integer"
+                    },
+                    "data": {
+                      "type": "array",
+                      "items": {
+                        "type": "object",
+                        "properties": {
+                          "id": {
+                            "type": "string"
+                          },
+                          "title": {
+                            "type": "string"
+                          },
+                          "body": {
+                            "type": "string"
+                          },
+                          "createdAt": {
+                            "type": "string",
+                            "format": "date-time"
+                          }
+                        }
+                      }
+                    }
+                  }
                 }
               }
             }
